--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Bryce Davis
 description: Data Science student from UGA
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: 
+avatar: https://github.com/brdavi2675/brdavi2675.github.io/blob/master/images/Profile%20Picture.jpg
 
 #
 # Flags below are optional
