--- a/_config.yml
+++ b/_config.yml
@@ -18,15 +18,14 @@ avatar: https://github.com/brdavi2675/brdavi2675.github.io/blob/master/images/Pr
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email:
+  email: brycerdavis@tutanota.com
   facebook:
   flickr:
-  github: barryclark/jekyll-now
+  github: https://github.com/brdavi2675/
   instagram:
-  linkedin: https://www.linkedin.com/in/bryce-davis-581b18207/
+  linkedin: https://www.linkedin.com/in/brycedavi/
   pinterest:
   rss: # just type anything here for a working RSS icon
-  twitter: jekyllrb
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
